--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "funnies",
   "version": "0.3.1",
   "description": "Make user's laugh when your app is loading.",
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha test/unit/index.js --compilers js:babel-register",
     "build": "./node_modules/.bin/babel src/ -d dist/",
@@ -34,13 +34,15 @@
   "homepage": "https://github.com/1egoman/funnies",
   "devDependencies": {
     "babel-cli": "^6.0.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-register": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "chai": "^2.0.0",
-    "del": "^1.1.1",
+    "del": "^1.2.1",
     "gulp": "^3.8.10",
-    "gulp-babel": "^5.0.0",
+    "gulp-babel": "^6.0.0",
     "gulp-istanbul": "^0.6.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
@@ -48,6 +50,9 @@
     "gulp-mocha": "^2.0.0",
     "gulp-notify": "^2.1.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "isparta": "^2.0.0",
     "jsdom": "^9.2.1",
     "jshint-stylish": "^1.0.0",
@@ -56,7 +61,10 @@
     "react-addons-test-utils": "^15.1.0",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.7.0",
-    "uglifyify": "^3.0.2"
+    "uglifyify": "^3.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
@@ -66,8 +74,6 @@
     ]
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
     "lodash": "^4.13.1",
     "radium": "^0.17.1",
     "react": "^15.1.0",
